2009-04-21 21:11  rsbivand

	* ChangeLog, R/bin_link.R, inst/ChangeLog: NODATA 999 test bug
	  fixed

2009-04-21 08:36  rsbivand

	* R/vect_link.R: guard against rgdal < 0.6-8

2009-04-16 18:04  rsbivand

	* R/initGRASS.R, R/vect_link.R, man/readVECT6.Rd: tidy

2009-04-16 11:38  rsbivand

	* ChangeLog, inst/ChangeLog: writeRAST6 arguments

2009-04-16 10:33  rsbivand

	* DESCRIPTION, R/bin_link.R, man/readRAST6.Rd: writeRAST6 arguments

2009-04-15 21:03  rsbivand

	* ChangeLog, R/bin_link.R, inst/ChangeLog, man/readRAST6.Rd: fixing
	  rough edges in input/output

2009-04-15 16:43  rsbivand

	* DESCRIPTION, R/vect_link.R, man/readVECT6.Rd: v.in.ogr flags NULL

2009-04-06 22:30  rsbivand

	* ChangeLog, inst/ChangeLog: bat check fix

2009-04-06 22:26  rsbivand

	* R/xml1.R, R/zzz.R, man/readRAST6.Rd: QGIS/cygwin cleanup

2009-04-06 20:21  rsbivand

	* R/zzz.R: bat check fix

2009-04-06 19:45  rsbivand

	* R/xml1.R: bat check fix

2009-04-06 19:41  rsbivand

	* R/xml1.R: bat check fix

2009-04-06 19:40  rsbivand

	* R/zzz.R: Windows Native cleanup

2009-04-06 19:10  rsbivand

	* R/: xml1.R: bat check fix

2009-04-06 19:03  rsbivand

	* R/: xml1.R, zzz.R: bat check fix

2009-04-06 18:37  rsbivand

	* R/: initGRASS.R, spgrass6.R, xml1.R, zzz.R: bat check fix

2009-04-06 11:17  rsbivand

	* ChangeLog, R/xml1.R, inst/ChangeLog: bat check fix

2009-04-05 21:41  rsbivand

	* DESCRIPTION, R/xml1.R, man/readRAST6.Rd: Windows Native cleanup

2009-04-03 21:30  rsbivand

	* R/xml1.R, man/readRAST6.Rd: Windows Native cleanup

2009-04-03 13:35  rsbivand

	* R/bin_link.R, R/vect_link.R, man/readRAST6.Rd, man/readVECT6.Rd,
	  man/spgrass6.Rd: implementing via execGRASS phase 2

2009-04-02 22:26  rsbivand

	* DESCRIPTION, R/spgrass6.R, R/vect_link.R: execGRASS conversion
	  phase 1

2009-04-02 11:09  rsbivand

	* ChangeLog, DESCRIPTION, inst/ChangeLog: tidy

2009-04-02 11:04  rsbivand

	* DESCRIPTION, R/AAA.R, R/initGRASS.R, R/spgrass6.R, R/zzz.R:
	  checking Windows initGRASS
