@@ -1,6 +1,6 @@
 Package: spgrass6
-Version: 0.6-5
-Date: 2009-04-16
+Version: 0.6-6
+Date: 2009-05-24
 Title: Interface between GRASS 6 geographical information system and R
 Author: Roger Bivand
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
