@@ -1,3 +1,8 @@
+2009-05-24 11:28  rsbivand
+
+	* DESCRIPTION, R/xml1.R, man/execGRASS.Rd: added multiple parameter
+	  support
+
 2009-04-21 21:11  rsbivand
 
 	* ChangeLog, R/bin_link.R, inst/ChangeLog: NODATA 999 test bug
